src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-audit-as-default-root-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[root-package]]
version = "10.0.0"
criteria = "safe-to-deploy"

[[third-party1]]
version = "10.0.0"
criteria = "safe-to-deploy"

[[third-party2]]
version = "10.0.0"
criteria = "safe-to-deploy"

[[transitive-third-party1]]
version = "10.0.0"
criteria = "safe-to-deploy"

