src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-audit-as-weaker-root-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[root-package]]
version = "10.0.0"
criteria = "safe-to-run"

[[third-party1]]
version = "10.0.0"
criteria = "safe-to-run"

[[third-party2]]
version = "10.0.0"
criteria = "safe-to-run"

[[transitive-third-party1]]
version = "10.0.0"
criteria = "safe-to-run"

