src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-exemptions-regenerate-merge-nonew.snap
---
source: src/tests/regenerate_unaudited.rs
expression: exemptions
---
[[transitive-third-party1]]
version = "5.0.0"
criteria = "criteria1"

[[transitive-third-party1]]
version = "5.0.0"
criteria = "criteria2"

