src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-exemptions-regenerate-nonew-failed.snap
---
source: src/tests/regenerate_unaudited.rs
expression: exemptions
---
[[third-party1]]
version = "300.0.0"
criteria = "safe-to-deploy"

[[transitive-third-party1]]
version = "300.0.0"
criteria = "safe-to-deploy"

[[transitive-third-party1]]
version = "400.0.0"
criteria = "safe-to-deploy"

