src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-unaudited-extra-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[third-party1]]
version = "10.0.0"
criteria = "safe-to-deploy"

