src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-unaudited-nested-stronger-req-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[third-party1]]
version = "3.0.0"
criteria = "safe-to-run"

[[transitive-third-party1]]
version = "4.0.0"
criteria = "safe-to-run"

