src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-unaudited-nested-weaker-req-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: exemptions
---
[[third-party1]]
version = "3.0.0"
criteria = "safe-to-deploy"

[[transitive-third-party1]]
version = "4.0.0"
criteria = "safe-to-run"

