src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-unaudited-overbroad-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[dev]]
version = "10.0.0"
criteria = "safe-to-run"

