src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-unaudited-partial-twins-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[third-core]]
version = "10.0.0"
criteria = "safe-to-deploy"

